# PDFGenie

./: .gitignore  index.html  main.py  pyproject.toml  readme.md  requirements.txt
